--- a/AndroidGLESTest/AndroidGLESTest.NativeActivity/AndroidGLESTest.NativeActivity.vcxproj.filters
+++ b/AndroidGLESTest/AndroidGLESTest.NativeActivity/AndroidGLESTest.NativeActivity.vcxproj.filters
@@ -21,6 +21,7 @@
     <ClInclude Include="LightSource.h" />
     <ClInclude Include="Terrain.h" />
     <ClInclude Include="SkyBox.h" />
+    <ClInclude Include="GameManager.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="android_native_app_glue.c" />
@@ -42,5 +43,6 @@
     <ClCompile Include="LightSource.cpp" />
     <ClCompile Include="Terrain.cpp" />
     <ClCompile Include="SkyBox.cpp" />
+    <ClCompile Include="GameManager.cpp" />
   </ItemGroup>
 </Project>
