--- a/AndroidGLESTest/AndroidGLESTest.NativeActivity/AndroidGLESTest.NativeActivity.vcxproj.filters
+++ b/AndroidGLESTest/AndroidGLESTest.NativeActivity/AndroidGLESTest.NativeActivity.vcxproj.filters
@@ -25,6 +25,7 @@
     <ClCompile Include="XMLUtils.cpp" />
     <ClCompile Include="DeltaTime.cpp" />
     <ClCompile Include="InputManager.cpp" />
+    <ClCompile Include="BoundingBox.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AmbientalLight.h" />
@@ -54,5 +55,6 @@
     <ClInclude Include="XMLUtils.h" />
     <ClInclude Include="DeltaTime.h" />
     <ClInclude Include="InputManager.h" />
+    <ClInclude Include="BoundingBox.h" />
   </ItemGroup>
 </Project>
