Converted SceneManager to GLO. Converted SceneObject (and derivates) to GLO. Added the SceneManager as a component of the GameManager Added XML links section, and its parsing logic

--- a/AndroidGLESTest/AndroidGLESTest.NativeActivity/AndroidGLESTest.NativeActivity.vcxproj
+++ b/AndroidGLESTest/AndroidGLESTest.NativeActivity/AndroidGLESTest.NativeActivity.vcxproj
@@ -193,6 +193,7 @@
       <CompileAs>CompileAsCpp</CompileAs>
       <ExceptionHandling>Enabled</ExceptionHandling>
       <CppLanguageStandard>c++11</CppLanguageStandard>
+      <RuntimeTypeInfo>true</RuntimeTypeInfo>
     </ClCompile>
     <Link>
       <LibraryDependencies>%(LibraryDependencies);GLESv2;EGL;m;log;</LibraryDependencies>
