--- a/AndroidGLESTest/AndroidGLESTest.NativeActivity/AndroidGLESTest.NativeActivity.vcxproj.filters
+++ b/AndroidGLESTest/AndroidGLESTest.NativeActivity/AndroidGLESTest.NativeActivity.vcxproj.filters
@@ -24,6 +24,8 @@
     <ClCompile Include="DeltaTime.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="BoundingBox.cpp" />
+    <ClCompile Include="Transform.cpp" />
+    <ClCompile Include="TimeLerp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AmbientalLight.h" />
@@ -52,5 +54,7 @@
     <ClInclude Include="DeltaTime.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="BoundingBox.h" />
+    <ClInclude Include="Transform.h" />
+    <ClInclude Include="TimeLerp.h" />
   </ItemGroup>
 </Project>
