Added BV intersection tests Added a bounding sphere class Modified bounding box class Added a collision detection method Added more utility methods to GLO Renamed SceneObject to VisualBody to better reflect its functionality Removed Terrain and Trajectory Added an empty PhysicsBody class

--- a/AndroidGLESTest/AndroidGLESTest.NativeActivity/AndroidGLESTest.NativeActivity.vcxproj
+++ b/AndroidGLESTest/AndroidGLESTest.NativeActivity/AndroidGLESTest.NativeActivity.vcxproj
@@ -214,7 +214,10 @@
   <ItemGroup>
     <ClInclude Include="AmbientalLight.h" />
     <ClInclude Include="BoundingBox.h" />
+    <ClInclude Include="BoundingSphere.h" />
+    <ClInclude Include="BVIntersections.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="CollisionDetection.h" />
     <ClInclude Include="DeltaTime.h" />
     <ClInclude Include="Fog.h" />
     <ClInclude Include="GameLoopObject.h" />
@@ -225,18 +228,17 @@
     <ClInclude Include="Model.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="android_native_app_glue.h" />
+    <ClInclude Include="PhysicsBody.h" />
     <ClInclude Include="PrintUtils.h" />
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="SceneManager.h" />
-    <ClInclude Include="SceneObject.h" />
+    <ClInclude Include="VisualBody.h" />
     <ClInclude Include="SceneObjectSpawner.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Shaders.h" />
     <ClInclude Include="Structs.h" />
-    <ClInclude Include="Terrain.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TimeLerp.h" />
-    <ClInclude Include="Trajectory.h" />
     <ClInclude Include="Transform.h" />
     <ClInclude Include="UniqueID.h" />
     <ClInclude Include="Vertex.h" />
@@ -246,7 +248,10 @@
     <ClCompile Include="AmbientalLight.cpp" />
     <ClCompile Include="android_native_app_glue.c" />
     <ClCompile Include="BoundingBox.cpp" />
+    <ClCompile Include="BoundingSphere.cpp" />
+    <ClCompile Include="BVIntersections.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="CollisionDetection.cpp" />
     <ClCompile Include="DeltaTime.cpp" />
     <ClCompile Include="Fog.cpp" />
     <ClCompile Include="GameManager.cpp" />
@@ -255,18 +260,17 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Math.cpp" />
     <ClCompile Include="Model.cpp" />
+    <ClCompile Include="PhysicsBody.cpp" />
     <ClCompile Include="PrintUtils.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="SceneManager.cpp" />
-    <ClCompile Include="SceneObject.cpp" />
+    <ClCompile Include="VisualBody.cpp" />
     <ClCompile Include="SceneObjectSpawner.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Shaders.cpp" />
-    <ClCompile Include="Terrain.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TGA.cpp" />
     <ClCompile Include="TimeLerp.cpp" />
-    <ClCompile Include="Trajectory.cpp" />
     <ClCompile Include="Transform.cpp" />
     <ClCompile Include="XMLUtils.cpp" />
   </ItemGroup>
