--- a/AndroidGLESTest/AndroidGLESTest.NativeActivity/AndroidGLESTest.NativeActivity.vcxproj
+++ b/AndroidGLESTest/AndroidGLESTest.NativeActivity/AndroidGLESTest.NativeActivity.vcxproj
@@ -212,6 +212,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="AIActions.h" />
+    <ClInclude Include="AIController.h" />
+    <ClInclude Include="AIRule.h" />
     <ClInclude Include="AmbientalLight.h" />
     <ClInclude Include="BoundingBox.h" />
     <ClInclude Include="BoundingSphere.h" />
@@ -238,6 +241,7 @@
     <ClInclude Include="android_native_app_glue.h" />
     <ClInclude Include="PhysicsBody.h" />
     <ClInclude Include="PrintUtils.h" />
+    <ClInclude Include="Projectile.h" />
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="RigidCollisionResponse.h" />
     <ClInclude Include="Robot.h" />
@@ -256,6 +260,9 @@
     <ClInclude Include="XMLUtils.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AIActions.cpp" />
+    <ClCompile Include="AIController.cpp" />
+    <ClCompile Include="AIRule.cpp" />
     <ClCompile Include="AmbientalLight.cpp" />
     <ClCompile Include="android_native_app_glue.c" />
     <ClCompile Include="BoundingBox.cpp" />
@@ -280,6 +287,7 @@
     <ClCompile Include="MovementController.cpp" />
     <ClCompile Include="PhysicsBody.cpp" />
     <ClCompile Include="PrintUtils.cpp" />
+    <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="RigidCollisionResponse.cpp" />
     <ClCompile Include="Robot.cpp" />
